# CW_5

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: api.py  dbmanager.py  employer.py  vacancy.py
