[tool.poetry]
name = "cw4"
version = "0.1.0"
description = ""
authors = ["Eduard Slobodyanik <slobodyanik.ed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
requests = "^2.32.3"
psycopg2 = "^2.9.9"


[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
